# UnionFind

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/unionfind/: unionfind.hpp
test/: CMakeLists.txt  main.cpp  tests.cpp
